--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
 body{
     font-family: system-ui;
-    background-color: rgb(180, 109, 246);
+    background-color: rgb(160, 76, 239);
+    background: linear-gradient(purple,rgb(173, 53, 220),rgb(221, 141, 28));
+    color: aliceblue;
+
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+h1{
+    font-size:  12vw;
+}
+h2{
+    text-align: center;
+    max-width: 25ch;
 }
