--- a/style.css
+++ b/style.css
@@ -14,10 +14,10 @@ body{
 
 h1{
     font-size:  12vw;
-    text-align: center;
+    text-align: right;
 }
 h2{
-    text-align: center;
+    text-align: right;
     max-width: 25ch;
 }
 
