--- a/style.css
+++ b/style.css
@@ -27,21 +27,33 @@ a {
 
 /* - - - - - - - - - - - - - - - -  */
 /* - - MISE EN PAGE - - - - - - - - */
-body{
+header{
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
- }
-h1{
-    font-size:  12vw;
-    text-align: right;
+    flex-direction: column; 
 }
-h2{
-    text-align: right;
-    max-width: 25ch;
+
+section{
+    border-top: 1px solid white;
+    min-height: 100vh;
 }
 
 /* - - - - - - - - - - - - - - - -  */
 /* - - MODULES - - - - - - - - */
+
+nav{
+    background-color: #0003;
+
+    display: flex;
+    gap: 1rem;
+    width: 100%;
+}
+nav a {
+    padding: 1%;
+}
+
+nav a:hover{
+    background-color: rgba(122, 48, 207, 0.482);
+}
