--- a/style.css
+++ b/style.css
@@ -25,14 +25,27 @@ a {
     color: inherit
 }
 
+/*  - - - - - - - - - - - - - - - - */
+/* - - UI/UX - - - - - - - - */
+html {
+    scroll-behavior: smooth;
+}
+a.topNav{
+    font-size: 1rem;
+    position: absolute;
+    right: 2rem;
+}
+
 /* - - - - - - - - - - - - - - - -  */
 /* - - MISE EN PAGE - - - - - - - - */
-header{
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column; 
+
+
+header .hero {
+    height: calc(100vh - 3rem);
+}
+
+header nav {
+    height: 3rem;
 }
 
 section{
@@ -56,4 +69,43 @@ nav a {
 
 nav a:hover{
     background-color: rgba(122, 48, 207, 0.482);
+}
+
+/* .hero */
+
+.hero {
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hero .image,
+.hero .texte{
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    margin: 1rem;
+}
+
+
+.hero .image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.hero .image img {
+    width: 100%;
+    heigth: 100%;
+    object-fit: cover;
+}
+
+.hero .texte {
+    background-color: #0004003c;
+    z-index: 2;
 }
