--- a/style.css
+++ b/style.css
@@ -30,10 +30,18 @@ a {
 html {
     scroll-behavior: smooth;
 }
+
+*:has(.topNav){ position: relative;}
 a.topNav{
     font-size: 1rem;
     position: absolute;
     right: 2rem;
+}
+
+nav {
+    position: sticky;
+    top: 0;
+    z-index: 99;
 }
 
 /* - - - - - - - - - - - - - - - -  */
@@ -44,8 +52,9 @@ header .hero {
     height: calc(100vh - 3rem);
 }
 
-header nav {
+nav {
     height: 3rem;
+    justify-content: center;
 }
 
 section{
